# wifi-analyzer

./: .gitignore  CLAUDE.md  README.md  com.example.WifiAnalyzer.json  meson.build  test.js  test_connectivity.sh
data/: com.example.WifiAnalyzer.desktop.in  com.example.WifiAnalyzer.gschema.xml  com.example.WifiAnalyzer.metainfo.xml.in  gschemas.compiled
po/: POTFILES.in
src/: advancedChannelAnalyzer.js  advancedCharts.css  advancedNetworkAnalyzer.js  application.js  channelAnalyzer.js  chartWidget.js  charts-old.css  charts.css  connectionManager.js  dataExporter.js  gpsManager.js  main.js  modern.css  networkDetailsDialog.js  networkManagementWindow.js  networkManager.js  networkScanner.js  preferencesWindow.js  realtimeCharts.js  style.css  telemetryWindow.js  themeSelector.js  window.js
